syntax = "proto3";

option csharp_namespace = "Server";

service ServiMoto {
	rpc LogInClient (ClientLookup) returns (ClientService);
	rpc FindCurrentTask (ClientInfo) returns (CurrentTask);
	rpc GetNewTask (ClientInfo) returns (CurrentTask);
	rpc CompleteTask (TaskInfo) returns (Validation);
	rpc LeaveService (ClientInfo) returns (Validation);
	rpc NewService (ClientInfo) returns (Validation);
	rpc NewTask (ClientService) returns (Validation);
}

// Mensagem com dados login do utilizador
message ClientLookup {
	string id = 1;
	string password = 2;
}

// Mensagem com id do utilizador e servico para procurar tarefas
message ClientInfo {
	string id = 1;
	string servico = 2;
}

// Mensagem com informação sobre uma tarefa
message TaskInfo {
	string id = 1;
	string servico = 2;
}

// Mensagem para enviar o serviço do client, caso login esteja correto
message ClientService {
	string servico	= 1;
}

// Mensagem com a tarefa atual do utilizador
message CurrentTask {
	string id = 1;
	string descricao = 2;
	string estado = 3;
	string clientId = 4;
}

message Validation {
	bool result = 1;
}